# rust-micro-bit

./: .gitignore  Cargo.toml  README.md  setup.md
.cargo/: config.toml
docs/: cell_vs_refcell.md  interrupts_explainer.md
src/: digits.rs  main.rs  symbols.rs  types.rs
