[package]
name = "rust-micro-bit"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.5", features = ["device"] }
microbit-v2 = "0.16.0"
panic-halt = "1.0.0"
rtt-target = "0.5"
embedded-hal = "1.0.0"

